--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
         </nav>
       
         <main id="world">
-          World
+            <!-- <canvas id="island1" class="island" width="200" height="100"></canvas> -->
         </main>
     </div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/synaptic/1.1.4/synaptic.js"></script>
+    <script src="./assets/js/pixi.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
