--- a/index.html
+++ b/index.html
@@ -23,9 +23,16 @@
         </main>
     </div>
     
+    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/synaptic/1.1.4/synaptic.js"></script>
+    <!-- Synapyic.js: Neural Network Library -->
+    <script src="./assets/js/synaptic.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/synaptic/1.1.4/synaptic.js"></script> -->
+    <!-- Pixi.js: 2D Animation Library (built on WebGL) -->
     <script src="./assets/js/pixi.min.js"></script>
+    <!-- <script src="https://unpkg.com/pixi-smoothie/dist/smoothie.min.js"></script> -->
+    <!-- My JS files -->
+    <script src="./assets/js/vector2d.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
